--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
   "manifest_version": 2,
-  "name": "hello world",
+  "name": "extension of history",
   "version": "1.0",
-  "description": "my first extension",
+  "description": "extensionl of historoy",
   "browser_action": {
     "default_popup": "popup.html",
     "default_icon": "icon.png"
